--- a/index.html
+++ b/index.html
@@ -1,6 +1,25 @@
 <!DOCTYPE html>
 <html>  
 <head>
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6HFPM15FTZ"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6HFPM15FTZ');
+</script>
+
+    
+
+
+
+
+
+
+    
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>betul-Wedding</title>
     <link rel="stylesheet" href="style.css">
