--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 <html>  
 <head>
 
-
+<meta name="google-site-verification" content="AxdexmjFx2QZt-fMq1Y_B3ngQUCcUshKZzXH7KLeu0U" />
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6HFPM15FTZ"></script>
 <script>
