--- a/camera.html
+++ b/camera.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>  
+<html lang="en">  
 <head>
 
 <meta name="google-site-verification" content="AxdexmjFx2QZt-fMq1Y_B3ngQUCcUshKZzXH7KLeu0U" />
