--- a/cars.html
+++ b/cars.html
@@ -129,10 +129,10 @@ If you are impressed by our features then you can show your love by reviewing an
         <p>center in multai . you can contact us using our no.,email,and by social meadia <br> we provide wedding equipments on rent anywhere in multai or nearby multai</p>
         <p>मुलताई में केंद्र। आप हमारे नंबर, ईमेल और सोशल मीडिया का उपयोग करके हमसे संपर्क कर सकते हैं <br> हम मुलताई या आसपास के मुलताई में कहीं भी शादी के उपकरण किराए पर प्रदान करते हैं</p>
     <div class="Icons">
-        <a href="https://www.facebook.com/profile.php?id=61554979948774&mibextid=vk8aRt">
+        <a class="Facebook" href="https://www.facebook.com/profile.php?id=61554979948774&mibextid=vk8aRt">
        <i class="fa-brands fa-facebook"></i>
         </a> 
-        <a href="https://www.instagram.com/wedding.equipment?igsh=YzVkODRmOTdmMw==">
+        <a class="Instagram"href="https://www.instagram.com/wedding.equipment?igsh=YzVkODRmOTdmMw==">
        <i class="fa-brands fa-instagram"></i>              
         </a>
         </div>
