--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">  
 <head>
+  <meta name="discription">
 <meta name="google-site-verification" content="AxdexmjFx2QZt-fMq1Y_B3ngQUCcUshKZzXH7KLeu0U" />
 
 <!-- Google tag (gtag.js) -->
