--- a/cars.html
+++ b/cars.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en"> 
 <head>
- <meta name="discription"> 
+ <meta name="discription" content="we provide you your dream car on rent for wedding,getway etc.you can also book cab for whole day in Multai betul bhopal indore madhya Pradesh India"> 
 <meta name="google-site-verification" content="AxdexmjFx2QZt-fMq1Y_B3ngQUCcUshKZzXH7KLeu0U" />
 <!-- Google tag (gtag.js) -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-6HFPM15FTZ"></script>
