--- a/camera.html
+++ b/camera.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">  
 <head>
-<meta name="discription">
+<meta name="discription" content="On this page we provide you latest and high quality camera on rent for photography,wedding shoot.we have many like 'ring ca, polaroid camera,blink camera,doorbell cameradisposable camera,disposable camera     ">
 <meta name="google-site-verification" content="AxdexmjFx2QZt-fMq1Y_B3ngQUCcUshKZzXH7KLeu0U" />
 
 <!-- Google tag (gtag.js) -->
