--- a/DJ.html
+++ b/DJ.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">  
 <head>
-  <meta name="discription">
+  <meta name="discription" content="on this page you can book dj for any event like wedding,birthday party,etc, on lowest price possible.in multai betul bhopal indore Madhya Pradesh india">
 <meta name="google-site-verification" content="AxdexmjFx2QZt-fMq1Y_B3ngQUCcUshKZzXH7KLeu0U" />
 
 <!-- Google tag (gtag.js) -->
