--- a/DJ.html
+++ b/DJ.html
@@ -22,7 +22,7 @@
     
     
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>betul-wedding-dj</title>
+    <title>wedding-dj</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="css/all.css">
         <link rel="icon" href="images/favicon.jpg.png">
@@ -53,6 +53,7 @@
     </section>
     <section class="heading">
         <h2>linear DJ service</h2>
+      <p>In the vibrant city of <bold>Indore</bold>, our DJ rental service stands as the go-to solution for elevating your events and celebrations to new heights. With a diverse selection of top-quality DJ equipment, we offer the perfect audio experience tailored to your specific needs. Whether it's a wedding, corporate event, or a lively party, our DJ rental service in Indore ensures that you have access to state-of-the-art sound systems, cutting-edge mixing consoles, and a variety of lighting options to create the perfect ambiance. Our commitment to customer satisfaction is reflected in our seamless rental process, ensuring that you can easily book the desired equipment for your event. We pride ourselves on providing not just equipment but a complete experience, with optional add-ons like skilled DJ professionals who can curate playlists and keep the energy high throughout your celebration. Trust our DJ rental service in Indore to turn your gatherings into unforgettable experiences, where every beat and rhythm contributes to the vibrancy of the occasion.</p>
         <h2>"Party On a Budget: Unlock the Groove with Affordable DJ Rental Services"</h2>
          <p>🎧 Elevate Your Event with Our Premier DJ Booking Services! 🎶
 
